# Shaurya-Stocks

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  DEPLOY.md  FINAL_REPORT.md  Makefile  README.md  TRUST.md
.codex-pet-runs/voidlet/: imagegen-jobs.json  pet_request.json
.codex-pet-runs/voidlet/final/: validation.json
.codex-pet-runs/voidlet/frames/: frames-manifest.json
.codex-pet-runs/voidlet/prompts/: base-pet.md
.codex-pet-runs/voidlet/qa/: review.json  run-summary.json
.github/workflows/: ci.yml  daily-paper.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/examples/backtest/: README.md  prepare_sp500_5yr.py  sp500_momentum.yaml
apps/api/scripts/: fetch_fundamentals.py
apps/api/src/quant/: __init__.py  cli.py  main.py
apps/api/src/quant/adapters/: __init__.py  alpaca.py  alphavantage.py  base.py  exceptions.py  finnhub.py  fmp.py  fred.py  groq.py  marketaux.py  nasdaq_data_link.py  newsapi.py  openrouter.py  polygon.py  tiingo.py
apps/api/src/quant/api/v1/: __init__.py  admin.py  auth.py  market.py  orders.py  signals.py  stream.py
apps/api/src/quant/backtest/: __init__.py  engine.py  reproducibility.py  runner.py  signals.py  statistics.py
apps/api/src/quant/config/: __init__.py  settings.py
apps/api/src/quant/core/: dependencies.py  security.py
apps/api/src/quant/cv/: __init__.py  purged_kfold.py
apps/api/src/quant/db/: __init__.py  base.py  models.py
apps/api/src/quant/execution/: __init__.py  broker.py  live_session.py  orders.py  paper_session.py  sanity_check.py
apps/api/src/quant/features/: __init__.py  briefing.py  build.py  catalysts.py  macro_regime.py  sentiment.py  technical.py
apps/api/src/quant/ingest/: __init__.py  corporate_actions.py  macro.py  news.py  ohlcv.py
apps/api/src/quant/labels/: __init__.py  triple_barrier.py
apps/api/src/quant/ml/: calibration.py  predict.py  trainer.py  tune.py
apps/api/src/quant/models/: __init__.py  lightgbm_trainer.py
apps/api/src/quant/monitoring/: metrics.py
apps/api/src/quant/portfolio/: __init__.py  reconcile.py
apps/api/src/quant/risk/: __init__.py  manager.py
apps/api/src/quant/streaming/: __init__.py  alpaca_ws.py
apps/api/src/quant/universe/: __init__.py  constituents.py  loader.py  point_in_time.py
apps/api/src/quant/workers/: flows.py  stream_worker.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth_flow.py
apps/api/tests/unit/: test_adapter_base.py  test_adapters.py  test_backtest_runner.py  test_backtest_stats.py  test_features.py  test_labels.py  test_live_session.py  test_ml_calibration.py  test_order_service.py  test_paper_session.py  test_point_in_time.py  test_purged_kfold.py  test_risk_manager.py  test_security.py  test_settings.py
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  vercel.json
apps/web/.oracle-artifacts/: paper-history.csv  paper-status.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: capital-flow-engine.tsx  command-dock.tsx  command-palette.tsx  dashboard.tsx  hero-section.tsx  market-overview.tsx  neural-network-viz.tsx  open-positions.tsx  performance-chart.tsx  signal-cards.tsx  signal-detail-view.tsx  trades-table.tsx  trading-terminal.tsx  volatility-meter.tsx  watch-list.tsx
apps/web/lib/: api.ts  cn-utils.ts  motion.ts  prng.ts
apps/web/scripts/: sync-oracle-artifacts.mjs
infra/: docker-compose.yml
infra/postgres/: init.sql
legacy/backend-v0/: .gitignore  PHASE_0_5_COMPLETE.md  README.md  RESEARCH_FREEZE.md  RESEARCH_NOTES.md  VALIDATION.md  run_all.sh  run_daily.py
legacy/backend-v0/backend/: ablation.py  backtest_baseline.py  backtest_cross_sectional.py  backtest_ensemble.py  backtest_walkforward.py  build_ablation_summary.py  build_features.py  calibrate_confidence.py  config.py  counterfactuals.py  cross_sectional_features.py  cross_sectional_labels.py  ensemble_alpha.py  explain_model.py  fetch_data.py  main.py  (+15 more)
(+112 files in other folders)
