[project]
name = "quant-api"
version = "0.1.0"
description = "Quant Signal Platform — FastAPI backend"
requires-python = ">=3.12"
readme = "../../README.md"

dependencies = [
    # --- web ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "websockets>=13.1",
    "sse-starlette>=2.1",

    # --- settings + validation ---
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",

    # --- auth ---
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3",

    # --- db ---
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "asyncpg>=0.30",

    # --- cache / queues / streams ---
    "redis>=5.2",
    "hiredis>=3.0",

    # --- object storage ---
    "boto3>=1.35",
    "minio>=7.2",

    # --- data / ml ---
    "polars>=1.17",
    "pandas>=2.2",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "statsmodels>=0.14",
    "hmmlearn>=0.3",
    "mlflow>=2.18",
    "pyarrow>=18.0",

    # --- provider adapters ---
    "polygon-api-client>=1.14",        # Polygon
    "alpaca-py>=0.34",                 # Alpaca broker + market data + stream
    "fredapi>=0.5",                    # FRED macro
    "finnhub-python>=2.4",             # Finnhub
    "yfinance>=0.2.50",                # yfinance fallback
    "sec-api>=1.0",                    # SEC EDGAR helper (optional)
    "groq>=0.13",                      # Groq LLM

    # --- workflow / scheduling ---
    "prefect>=3.1",
    "apscheduler>=3.10",

    # --- observability ---
    "loguru>=0.7",
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.18",
    "structlog>=24.4",

    # --- utils ---
    "python-dateutil>=2.9",
    "pytz>=2024.2",
    "orjson>=3.10",
    "tenacity>=9.0",
    "tqdm>=4.67",
    "typer>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6",
    "httpx>=0.28",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
    "types-pytz",
    "ipython>=8.30",
]

[project.scripts]
quant = "quant.cli:app"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "UP",         # pyupgrade
    "SIM",        # simplify
    "RUF",        # ruff-specific
    "S",          # bandit (security)
    "C4",         # comprehensions
    "PIE",        # misc
    "T20",        # no print in prod code
    "ANN",        # require type annotations
]
ignore = [
    "ANN101", "ANN102",   # self/cls annotations (deprecated)
    "S101",               # asserts ok in tests
    "T201",               # allow print in scripts/workers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "T201"]
"src/quant/workers/**" = ["T201"]
"scripts/**" = ["T201"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "xgboost.*",
    "shap.*",
    "hmmlearn.*",
    "fredapi.*",
    "finnhub.*",
    "yfinance.*",
    "polygon.*",
    "alpaca.*",
    "sec_api.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests hitting the DB/redis",
    "chaos: chaos/fault-injection tests",
    "slow: long-running",
    "external: hits a real external API (skipped in CI by default)",
]
